# cpp-image-processor

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  main.cpp
